--- a/css/styles.css
+++ b/css/styles.css
@@ -102,3 +102,11 @@ nav a img {
 nav a:hover img {
   transform: scale(1.2);
 }
+
+body {
+  background-image: url('../media/images/static-background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  
