--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   background-color: #111;
-  color: #eee;
+  color: #000000;
   margin: 0;
   padding: 0;
 }
