--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ body {
 }
 
 .dropdown-content a:hover {
-  background-color: #444;
+  background-color: #5a2a79;
 }
 
 .dropdown:hover .dropdown-content {
