--- a/css/styles.css
+++ b/css/styles.css
@@ -93,13 +93,16 @@ nav a {
   text-decoration: none;
 }
 
-nav a img {
+nav a img,
+nav span img {
   display: inline-block;
-  height: 50px;
+  height: 50px;  /* or your chosen button height */
   transition: transform 0.2s ease;
+  margin-right: 0.5rem;
 }
 
-nav a:hover img {
+nav a:hover img,
+nav span:hover img {
   transform: scale(1.2);
 }
 
