--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ header {
 nav a {
   color: #ff5500;
   text-decoration: none;
-  margin: 0 1rem;
+  margin: 1rem;
 }
 
 nav a:hover {
@@ -69,10 +69,11 @@ nav a {
 
 Enhance nav bar: padding, buttons, larger text, left align
 
-av a img {
+nav a img {
   display: inline-block;
-  height: 60px; /* match your button design height */
+  height: 60px; 
 }
+
 nav {
   padding: 1rem;
   text-align: left;
