--- a/css/styles.css
+++ b/css/styles.css
@@ -183,3 +183,8 @@ nav span:hover img {
 main h1 {
   padding-left: 1.5rem;
 }
+
+.content-wrap {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
