--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,12 @@ header {
 }
 
 footer {
-  background-color: #222;
-  padding: 1rem;
+  width: 100%;
+  background:
+  color: #fff;
   text-align: center;
-  color: #ffffff;
+  padding: 1rem 0;
+  margin: 0;
 }
 
 main {
