--- a/css/styles.css
+++ b/css/styles.css
@@ -25,11 +25,12 @@ header {
 
 footer {
   width: 100%;
-  background:
+  background: ##000000; 
   color: #fff;
   text-align: center;
   padding: 1rem 0;
   margin: 0;
+
 }
 
 main {
