--- a/css/styles.css
+++ b/css/styles.css
@@ -207,3 +207,20 @@ html, body {
 .return-button:hover {
   background-color: #5c2470;
 }
+
+figure img {
+  max-width: 600px;
+  width: 100%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+figure {
+  margin: 2em 0; 
+  text-align: center;
+}
+figcaption {
+  font-size: 0.9em;
+  color: #666;
+}
