--- a/css/styles.css
+++ b/css/styles.css
@@ -227,8 +227,10 @@ figcaption {
 
 .figure-1 {
   float: right;
-  max-width: 50%;
+  max-width: 40%;
   margin: 0 0 1em 1em;
+}
+
 }
 
 .figure-1 img {
