--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Georgia', 'Times New Roman', serif;
+  font-size: 19px;
+  line-height: 1.6;
   background-color: #111;
   color: #000000;
   margin: 0;
