--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,7 @@ nav span:hover img {
 .content-wrap {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 1em 1.5em; 
+  padding: 1em 1%em; 
   box-sizing: border-box;
 }
 
