--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,13 @@ header {
   padding: 0;
 }
 
+header img {
+  width: 75%;
+  height: auto;
+  display: block;
+  margin: 0 auto; 
+}
+
 footer {
   width: 100%;
   background: ##000000; 
