--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,12 @@ header {
   padding: 0;
 }
 
+.banner-image {
+  max-height: 200px;
+  width: auto;
+  display: block;
+  margin: 0 auto;
+
 footer {
   width: 100%;
   background: ##000000; 
