--- a/css/styles.css
+++ b/css/styles.css
@@ -256,6 +256,30 @@ figcaption {
   text-indent: 2em;
 }
 
+.track-nav {
+  display: flex;
+  justify-content: center;
+  gap: 2em; 
+  margin: 2em 0;
+  flex-wrap: wrap; 
+}
+
+.track-button {
+  display: inline-block;
+  padding: 1em 1.5em;
+  background-color: #431a50;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.2em;
+  border-radius: 50px;
+  transition: background-color 0.3s ease;
+}
+
+.track-button:hover {
+  background-color: orange;
+  color: #fff;
+}
+
 @media (max-width: 768px) {
   .figure-1,
   .figure-2 {
