--- a/css/styles.css
+++ b/css/styles.css
@@ -256,28 +256,35 @@ figcaption {
   text-indent: 2em;
 }
 
-.track-nav {
+..track-nav {
   display: flex;
-  justify-content: center;
-  gap: 2em; 
+  justify-content: space-between;  /* pushes buttons to far ends of container */
   margin: 2em 0;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;  /* ensures they stack if needed on small screens */
 }
 
 .track-button {
   display: inline-block;
   padding: 1em 1.5em;
-  background-color: #431a50;
+  background-color:
   color: #fff;
   text-decoration: none;
   font-size: 1.2em;
-  border-radius: 50px;
+  border-radius: 50px; 
   transition: background-color 0.3s ease;
 }
 
 .track-button:hover {
   background-color: orange;
   color: #fff;
+}
+
+.track-button.prev {
+  text-align: left;
+}
+
+.track-button.next {
+  text-align: right;
 }
 
 @media (max-width: 768px) {
