--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,23 @@ figcaption {
   flex-wrap: wrap;
 }
 
+.track-nav-inline {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1em;
+  margin: 1em 0;
+  justify-content: flex-start;
+}
+
+.left-button {
+  margin-right: auto;
+}
+
+.rewind-button-wrap {
+  margin: 0 auto;
+}
+
 .track-button {
   display: inline-block;
   padding: 1em 1.5em;
