--- a/css/styles.css
+++ b/css/styles.css
@@ -82,10 +82,9 @@ nav * {
 
 .slim-banner {
   display: block;
-  width: 100vw;
   max-width: 100%;
+  width: 100%;
   height: auto;
-  max-height: 100px;
   object-fit: cover;
 }
 
