--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,6 @@ body {
 }
 
 header, footer {
-  background-color: #222;
   padding: 1rem;
   text-align: center;
 }
@@ -26,9 +25,17 @@ header {
 }
 
 .header-inner {
-  max-width: 1200px; 
+  background-color: #222;
+  max-width: 1200px;
   margin: 0 auto;
-  padding: 0 1em;
+  padding: 1rem; 
+}
+
+.banner-image {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 footer {
