--- a/css/styles.css
+++ b/css/styles.css
@@ -19,13 +19,13 @@ header, footer {
 }
 
 header {
+  background-color: #222;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
 .header-inner {
-  background-color: #222;
   max-width: 1200px;
   margin: 0 auto;
   padding: 1rem; 
@@ -40,7 +40,7 @@ header {
 
 footer {
   width: 100%;
-  background: ##000000; 
+  background: #000000;
   color: #fff;
   text-align: center;
   padding: 1rem 0;
