--- a/css/styles.css
+++ b/css/styles.css
@@ -31,10 +31,15 @@ header {
   padding: 1rem; 
 }
 
+.nav-inner {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
 .banner-image {
   display: block;
   width: 100%;
-  max-width: 100%;
   height: auto;
 }
 
@@ -54,7 +59,7 @@ h1 {
 }
 
 nav {
-  text-align: left;
+  text-align: center;
   padding: 1rem;
 }
 
