--- a/css/styles.css
+++ b/css/styles.css
@@ -360,6 +360,26 @@ figcaption {
   margin: 1em 0;
 }
 
+.skip-link {
+  position: absolute;
+  left: -9999px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.skip-link:focus {
+  left: 0;
+  top: 0;
+  width: auto;
+  height: auto;
+  background: #000;
+  color: #fff;
+  padding: 1em;
+  z-index: 1000;
+}
+
 @media (max-width: 768px) {
   .figure-1,
   .figure-2 {
