--- a/css/styles.css
+++ b/css/styles.css
@@ -361,12 +361,14 @@ figcaption {
 }
 
 .skip-link {
-  position: absolute;
-  left: -9999px;
-  top: auto;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
+  position: static;
+  left: auto;
+  width: auto;
+  height: auto;
+  overflow: visible;
+  background: #000;
+  color: #fff;
+  padding: 1em;
 }
 
 .skip-link:focus {
