--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Georgia', 'Times New Roman', serif;
-  font-size: 19px;
+  font-size: 1.2rem;
   line-height: 1.6;
   background-color: #111;
   color: #000000;
