--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,7 @@ nav * {
 .content-wrap {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 1em 1%em; 
+  padding: 1em 1em; 
   box-sizing: border-box;
 }
 
