--- a/css/styles.css
+++ b/css/styles.css
@@ -376,7 +376,7 @@ figcaption {
 
 .track-image-button {
   max-width: 200px;
-  width: 100%;
+  width: 60px;
   height: auto;
   display: inline-block;
   margin: 0.5rem; 
