--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,24 @@ header {
   display: block;
   width: 100%;
   height: auto;
+  position: relative;
+}
+
+.banner-image::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.7) 100%);
+  pointer-events: none; 
+}
+
+. {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
 footer {
