--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,20 @@ header {
   pointer-events: none; 
 }
 
+.banner-container {
+  position: relative;
+}
+
+.banner-container::after {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.7) 100%);
+  pointer-events: none;
+}
+
 . {
   display: block;
   width: 100%;
