--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ header {
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 80%, rgba(0,0,0,0.7) 100%);
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 85%, #222 100%);
   pointer-events: none;
 }
 
