--- a/css/styles.css
+++ b/css/styles.css
@@ -61,10 +61,11 @@ header {
 .banner-container::after {
   content: "";
   position: absolute;
-  top: 0; left: 0;
+  top: 0; 
+  left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 85%, #222 100%);
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 90%, #000 100%);
   pointer-events: none;
 }
 
@@ -94,7 +95,7 @@ h1 {
 }
 
 nav {
-  background: linear-gradient(to top, #222 0%, rgba(34,34,34,0) 100%);
+  background: #000;
   padding: 1rem;
   text-align: center;
 }
