--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 90%, #000 100%);
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 95%, rgba(0,0,0,1) 100%);
   pointer-events: none;
 }
 
@@ -95,7 +95,7 @@ h1 {
 }
 
 nav {
-  background: linear-gradient(to bottom, #000 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(to bottom, #000 0%, rgba(0,0,0,0) 80%);
   padding: 1rem;
   text-align: center;
 }
