--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ header, footer {
 }
 
 header {
-  background: linear-gradient(to bottom, #222 0%, #222 60%, rgba(34, 34, 34, 0) 100%);
+  background: none;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -43,36 +43,8 @@ header {
   position: relative;
 }
 
-.banner-image::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.7) 100%);
-  pointer-events: none; 
-}
-
 .banner-container {
   position: relative;
-}
-
-.banner-container::after {
-  content: "";
-  position: absolute;
-  top: 0; 
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 95%, rgba(0,0,0,1) 100%);
-  pointer-events: none;
-}
-
-. {
-  display: block;
-  width: 100%;
-  height: auto;
 }
 
 footer {
@@ -95,7 +67,7 @@ h1 {
 }
 
 nav {
-  background: linear-gradient(to bottom, #000 0%, rgba(0,0,0,0) 80%);
+  background: #000;
   padding: 1rem;
   text-align: center;
 }
